// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accession /> should render the accession component for UniProt proteome 1`] = `
<div>
  UP000000278
</div>
`;

exports[`<Accession /> should render the accession component for UniProt reviewed 1`] = `
<div>
  A0A023GPI8
</div>
`;

exports[`<Accession /> should render the accession component for UniProt reviewed 2`] = `
<div>
  A0A023GPI8
</div>
`;

exports[`<Accession /> should render the accession component for UniProt unreviewed 1`] = `
<div>
  A0A1S2IFJ5
</div>
`;

exports[`<Accession /> should render the accession component for UniProt unreviewed 2`] = `
<div>
  A0A1S2IFJ5
</div>
`;

exports[`<Accession /> should render the accession component for other 1`] = `
<div>
  iprscan5-R20171012-151028-0135-99171282-p1m
</div>
`;

exports[`<Accession /> should render the accession component for taxon 1`] = `
<div>
  1
</div>
`;
